--- a/IFE-beautifulWeb/index.html
+++ b/IFE-beautifulWeb/index.html
@@ -6,21 +6,46 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="hea">
-		<div class="ti">
-			<h2>Hello World</h2>
-			<p>China is speeding up strategic plan, standards, traffic rules, laws and regulations on accident-incurred liabilities for its smart car industry, Economic Information Daily reported Thursday.</p>
-			<div class="titleForm">
-				<h3>Create Your Account</h3>
-				<p>It is absolutely free</p>
-				<form action="#" class="formCss">
-					<input type="text" >
-					<input type="" name="">
-					<button type="submit">SICN UP</button>
-				</form>
+	<div class="headerContainer">
+		<div class="headerBg">
+			<div class="headerContent">
+				<h2>Hello World</h2>
+				<p>China is speeding up strategic plan, standards, traffic rules, laws and regulations on accident-incurred liabilities for its smart car industry, Economic Information Daily reported Thursday.</p>
+				<div class="contentForm">
+					<h3>Create Your Account</h3>
+					<p>It is absolutely free</p>
+					<form action="#" class="formCss">
+						<input type="text" placeholder="denis@getcraftwork.com" name="user">
+						<input type="" placeholder="Create your password" name="password">
+						<button type="submit">SICN UP</button>
+					</form>
+				</div>
 			</div>
 		</div>
 	</div>
-	
+	<div class="pageTwoContainer">
+		<h3>Boatloads of Awesome</h3>
+		<h1>Ready-made, customizable, HTML landing page sections</h1>
+		<div class="pageTwoContent">
+			<img src="img/Icon1.png" alt="">
+			<h4>Mobile First</h4>
+			<p>All modulz are built mobile-first for maximum device compatibility.</p>
+		</div>
+		<div class="pageTwoContent">
+			<img src="img/Icon2.png" alt="">
+			<h4>Accessibility</h4>
+			<p>Support for IE8, mobile and tablet devices, screenreaders and color blind.</p>
+		</div>
+		<div class="pageTwoContent">
+			<img src="img/Icon3.png" alt="">
+			<h4>Fluid Typography</h4>
+			<p>On different screen sizes, fonts automagically scale with the viewport.</p>
+		</div>
+		<div class="pageTwoContent">
+			<img src="img/Icon4.png" alt="">
+			<h4>Customization</h4>
+			<p>Make any design your own using the Style Editor. Personalize fonts, colors, and layouts to create the custom look you want.</p>
+		</div>
+	</div>
 </body>
 </html>
