--- a/IFE-beautifulWeb/index.html
+++ b/IFE-beautifulWeb/index.html
@@ -47,5 +47,70 @@
 			<p>Make any design your own using the Style Editor. Personalize fonts, colors, and layouts to create the custom look you want.</p>
 		</div>
 	</div>
+
+	<div class="pageThreeBg">
+		<div class="pageThreeBgMB">
+			<div class="pageThreeContainer">
+				<div class="pageThreeContent">
+					<h2>Supportive policies for China's smart car</h2>
+					<p>China will come up with its own smart car standards, traffic rules, laws and regulations relating to safety, according to the China Industry Innovation Alliance for the Intelligent and Connected Vehicles.</p>
+					<button>Check out Features</button>
+					<button>Try product for Free</button>
+				</div>
+				<div class="pageThreeImg">
+					<img src="img/Screen.jpg" alt="">
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="pageFourBg">
+		
+		<div class="ourProducts">
+			<h2>Try Our Awesome Products</h2>
+			<div class="productsList">
+				<div class="products">
+					<img src="img/singletan.png">
+					<p>Li Jun, a China Academy of Engineering academician and also director of the alliance's experts' committee, said that China will also launch design guidance for smart cars, smart map architecture and standards for test grounds.</p>
+				</div>
+				<div class="products">
+					<img src="img/hero.png">
+					<p>Li said the smart car industry is able to enlarge the current car industry by 1 trillion yuan ($158.15 billion) and also able to boost fast development in 5G, internet of cars, big data, artificial intelligence and new-energy vehicles.</p>
+				</div>
+				<div class="products">
+					<img src="img/pontland.png">
+					<p>Zhang Junyi, a partner with NIO Capital, said that the smart car is the trend for the car industry and China's auto sector will usher in a new key development stage with the improvement of infrastructure, technology, policies and laws.</p>
+				</div>
+			</div>
+		</div>
+		<hr>
+		<div class="designContainer">
+			<div class="design">
+				<img class="floatLeft" src="img/img1.jpg" alt="">
+				<div class="desc floatRight">
+					<h3>Learn How to Improve Your Personal Business</h3>
+					<p>Li Jun, a China Academy of Engineering academician and also director of the alliance's experts' committee, said that China will also launch design guidance for smart cars, smart map architecture and standards for test grounds.</p>
+				</div>
+			</div>
+			<div class="design">
+				<img class="floatRight" src="img/img2.jpg" alt="">
+				<div class="desc floatLeft">
+					<h3>Choose Between Two Beautifully Designed Color Schemes.</h3>
+					<p>China will come up with its own smart car standards, traffic rules, laws and regulations relating to safety, according to the China Industry Innovation Alliance for the Intelligent and Connected Vehicles.</p>
+				</div>
+			</div>
+		</div>
+		<hr>
+		<div class="crewContainer">
+			<h2>Our Awesome Crew</h2>
+			<p>Our unique online teaching style makes learning easy for everyone. Whether you are trying to land a new job, brush up on your skills.</p>
+			<div class="crews">
+				<img src="img/people1.jpg" alt="">
+				<img src="img/people2.jpg" alt="">
+				<img src="img/people3.jpg" alt="">
+				<img src="img/people4.jpg" alt="">
+			</div>
+		</div>
+	</div>
 </body>
 </html>
