--- a/IFE-beautifulWeb/index.html
+++ b/IFE-beautifulWeb/index.html
@@ -105,12 +105,87 @@
 			<h2>Our Awesome Crew</h2>
 			<p>Our unique online teaching style makes learning easy for everyone. Whether you are trying to land a new job, brush up on your skills.</p>
 			<div class="crews">
-				<img src="img/people1.jpg" alt="">
-				<img src="img/people2.jpg" alt="">
-				<img src="img/people3.jpg" alt="">
-				<img src="img/people4.jpg" alt="">
+
+				<div class="crewLine clearFloat">
+					<div class="crew floatLeft">	
+						<img src="img/people1.jpg" alt="">
+						<div class="hiddenContent">
+							<h4>Ethan Dutton</h4>
+							<p>Senior Visual Designer</p>
+							<div class="Icon">
+								<img src="img/Icon7.png" alt="">
+								<img src="img/Icon6.png"" alt="">
+								<img src="img/Icon5.png"" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="crew floatRight">	
+						<img src="img/people2.jpg" alt="">
+						<div class="hiddenContent">
+							<h4>Ethan Dutton</h4>
+							<p>Senior Visual Designer</p>
+							<div class="Icon">
+								<img src="img/Icon7.png" alt="">
+								<img src="img/Icon6.png"" alt="">
+								<img src="img/Icon5.png"" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="crewLine clearFloat">
+					<div class="crew floatLeft">	
+						<img src="img/people3.jpg" alt="">
+						<div class="hiddenContent">
+							<h4>Ethan Dutton</h4>
+							<p>Senior Visual Designer</p>
+							<div class="Icon">
+								<img src="img/Icon7.png" alt="">
+								<img src="img/Icon6.png"" alt="">
+								<img src="img/Icon5.png"" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="crew floatRight">	
+						<img src="img/people4.jpg" alt="">
+						<div class="hiddenContent">
+							<h4>Ethan Dutton</h4>
+							<p>Senior Visual Designer</p>
+							<div class="Icon">
+								<img src="img/Icon7.png" alt="">
+								<img src="img/Icon6.png"" alt="">
+								<img src="img/Icon5.png"" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+				
 			</div>
 		</div>
+		<hr>
+		<div class="joinForm">
+			<div class="formContent">
+				<form action="#"> 
+					<input type="text" placeholder="E-maile">
+					<input type="text" placeholder="Subect">
+					<textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+
+					<button type="submit">SEND</button>
+
+
+				</form>
+			</div>
+			<div class="joinDesc">
+				<h2></h2>
+				<p></p>
+				
+			</div>
+
+		</div>
+
+
+
+
+
 	</div>
 </body>
 </html>
