IFE-beautifulWeb—sixCommit
第一版初步完成
结构和基本的样式已经完成

下一版
优化布局，添加文字图标
使用弹性布局

--- a/IFE-beautifulWeb/index.html
+++ b/IFE-beautifulWeb/index.html
@@ -162,30 +162,64 @@
 			</div>
 		</div>
 		<hr>
-		<div class="joinForm">
-			<div class="formContent">
+		<div class="joinForm clearFloat">
+			<div class="formContent floatLeft">
 				<form action="#"> 
 					<input type="text" placeholder="E-maile">
 					<input type="text" placeholder="Subect">
 					<textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
-
 					<button type="submit">SEND</button>
-
-
 				</form>
 			</div>
-			<div class="joinDesc">
-				<h2></h2>
-				<p></p>
-				
+			<div class="joinDesc floatRight">
+				<h2>Contacts</h2>
+				<p>Make any design your own using the Style Editor. Personalize fonts, colors, and layouts to create the custom look you want.</p>
+
+				<ul>
+					<li><span></span><p>360 King Street</P>
+					<p>Feastrvale Trevose, PA 19057</p> </li>
+					<li><span></span><p>(755) 564-84-12</p></li>
+					<li><span></span><p>youname@mail.com</p></li>
+				</ul>
 			</div>
 
 		</div>
+	</div>
 
-
-
-
-
+	<div class="footerBg">
+		<div class="footerContainer">
+			<table class="footContent">
+				<tr>
+					<th>LEARN MORE</th>
+					<th>ABOUT US</th>
+					<th>SUPPORT</th>
+					<th>ENJOY YOUR LIFE</th>
+				</tr>
+				<tr>
+					<td><a href="">How it works?</a></td>
+					<td><a href="">About us</a></td>
+					<td><a href="">F.A.Q.</a></td>
+					<td><a href="">Great web UI kit for designers, freelancers or business.</a></td>
+				</tr>
+				<tr>
+					<td><a href="">Meeting tools</a></td>
+					<td><a href="">Features</a></td>
+					<td><a href="">Contact us</a></td>
+					<td></td>
+				</tr>
+				<tr> 
+					<td><a href="">Live streaming</a></td>
+					<td><a href="">Privacy police</a></td>
+					<td><a href="">Live chat</a></td>
+					
+				</tr>
+				<tr>
+					<td><a href="">Contact method</a></td>
+					<td><a href="">Term & Conditions</a></td>
+					<td><a href="">Phone call</a></td>
+				</tr>
+			</table>
+		</div>
 	</div>
 </body>
 </html>
