IFE-web commit2
一次不太完全的提交

--- a/IFE-web/index.html
+++ b/IFE-web/index.html
@@ -11,7 +11,7 @@
 		<div class="nav">
 			<div class="navIcon">
 				<ul class="iconList">
-					<li><img src="img/icon1.png" alt=""></li>
+					<li class="select"><img src="img/icon1.png" alt=""></li>
 					<li><img src="img/icon2.png" alt=""></li>
 					<li><img src="img/icon3.png" alt=""></li>
 					<li><img src="img/icon4.png" alt=""></li>
@@ -24,18 +24,31 @@
 			</div>
 			<div class="navContentContainer">
 				<ul class="navContent">
-					<li><h3>MENU</h3><i></i></li>
-					<li>dddddddd</li>
-					<li>ffffff</li>
-					<li>ssss</li>
-					<li>ffff</li>
+					<li><p>MENU</p><i></i></li>
+					<li>Overview</li>
+					<li class="selectLi mes">Sales</li>
+					<li >Your Staff</li>
+					<li>Analytics & Targeting</li>
+					<li>What’s New</li>
+				</ul>
+				<ul class="navContent">
+					<li><p>MENU</p><i></i></li>
+					<li>Overview</li>
+					<li class="selectLi mes">Sales</li>
+					<li >Your Staff</li>
+					<li>Analytics & Targeting</li>
+					<li>What’s New</li>
+				</ul>
+				<ul class="navContent">
+					<li><p>MENU</p><i></i></li>
+					<li>Overview</li>
+					<li class="selectLi mes">Sales</li>
+					<li >Your Staff</li>
+					<li>Analytics & Targeting</li>
+					<li>What’s New</li>
 				</ul>
 			</div>
 		</div>
-		<div class="content">
-			
-		</div>
-
 	</div>
 	
 </body>
